# tinySgemmConv

./: .gitignore  CMakeLists.txt  astyle_align.sh  build_all.sh  build_android32.sh  build_android64.sh  build_android_arm32-gcc.sh  build_android_arm32.sh  build_android_arm64-gcc.sh  build_android_arm64.sh
include/: tinySgemmConv.h
src/: armNeon.h  common.c  common.cpp  common.h  config.h  im2col.cpp  im2col.h  im2col_job.c  im2col_job.cpp  innerApi.h  innerTinySgemmConv.h  jobs.h  list.h  messageQueue.cpp  messageQueue.h  pack.cpp  pack.h  packA.c  packB.c  packfp16.cpp  packfp16.h  sgemm.cpp  sgemm.h  sgemmfp16.cpp  sgemmfp16.h  thread_server.c  thread_server.cpp  thread_server.h  tinySgemmConv.c  tinySgemmConv.cpp
src/arm32/: sgemm1xkx12_fp16.S  sgemm1xkx12_fp32.S  sgemm1xkx12_fp32_align.S  sgemm2xkx12_fp16.S  sgemm2xkx12_fp32.S  sgemm2xkx12_fp32_align.S  sgemm4xkx12_fp16.S  sgemm4xkx12_fp32.S  sgemm4xkx12_fp32_align.S  sgemm4xkx4_fp16.S  sgemm4xkx4_fp32.S  sgemm4xkx4_fp32_align.S  sgemm4xkx8_fp16.S  sgemm4xkx8_fp32.S  sgemm4xkx8_fp32_align.S  tinySgemmConvPackB4x12_fp32_fp16_unit.S  tinySgemmConvPackB4x12_fp32_fp32_unit.S  tinySgemmConvPackB4x12_fp32_fp32_unit_align.S  tinySgemmConvPackB4x2_fp32_fp16_unit.S  tinySgemmConvPackB4x2_fp32_fp32_unit.S  tinySgemmConvPackB4x2_fp32_fp32_unit_align.S  tinySgemmConvPackB4x4_fp32_fp16_unit.S  tinySgemmConvPackB4x4_fp32_fp32_unit.S  tinySgemmConvPackB4x4_fp32_fp32_unit_align.S  tinySgemmConvPackB4x8_fp32_fp16_unit.S  tinySgemmConvPackB4x8_fp32_fp32_unit.S  tinySgemmConvPackB4x8_fp32_fp32_unit_align.S
src/arm64/: sgemm1xkx16_fp16.S  sgemm1xkx16_fp32.S  sgemm1xkx24_fp32.S  sgemm2xkx16_fp16.S  sgemm2xkx16_fp32.S  sgemm2xkx24_fp32.S  sgemm4xkx12_fp32.S  sgemm4xkx16_fp16.S  sgemm4xkx16_fp32.S  sgemm4xkx24_fp32.S  sgemm4xkx4_fp16.S  sgemm4xkx4_fp32.S  sgemm4xkx8_fp16.S  sgemm4xkx8_fp32.S  tinySgemmConvPackB4x12_fp32_fp32_unit.S  tinySgemmConvPackB4x16_fp32_fp16_unit.S  tinySgemmConvPackB4x16_fp32_fp32_unit.S  tinySgemmConvPackB4x24_fp32_fp32_unit.S  tinySgemmConvPackB4x2_fp32_fp16_unit.S  tinySgemmConvPackB4x2_fp32_fp32_unit.S  tinySgemmConvPackB4x4_fp32_fp16_unit.S  tinySgemmConvPackB4x4_fp32_fp32_unit.S  tinySgemmConvPackB4x8_fp32_fp16_unit.S  tinySgemmConvPackB4x8_fp32_fp32_unit.S
test/: CMakeLists.txt  build_android_arm64-gcc.sh  build_arm32-gcc.sh  build_arm32.sh  build_arm64-gcc.sh  build_arm64.sh  convolution_3x3s1.c  main.c
